; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/hotdox/extr_left.c_left_read.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/hotdox/extr_left.c_left_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@i2c_initialized = common dso_local global i32 0, align 4
@I2C_ADDR_WRITE = common dso_local global i32 0, align 4
@HOTDOX_I2C_TIMEOUT = common dso_local global i32 0, align 4
@I2C_ADDR_READ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @left_read(i64 %0, i64* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64* %1, i64** %5, align 8
  %7 = load i32, i32* @i2c_initialized, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  store i64 0, i64* %3, align 8
  br label %38

10:                                               ; preds = %2
  store i64 0, i64* %6, align 8
  %11 = load i32, i32* @I2C_ADDR_WRITE, align 4
  %12 = load i32, i32* @HOTDOX_I2C_TIMEOUT, align 4
  %13 = call i64 @i2c_start(i32 %11, i32 %12)
  store i64 %13, i64* %6, align 8
  %14 = load i64, i64* %6, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %10
  br label %35

17:                                               ; preds = %10
  %18 = load i64, i64* %4, align 8
  %19 = load i32, i32* @HOTDOX_I2C_TIMEOUT, align 4
  %20 = call i64 @i2c_write(i64 %18, i32 %19)
  store i64 %20, i64* %6, align 8
  %21 = load i64, i64* %6, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %17
  br label %35

24:                                               ; preds = %17
  %25 = load i32, i32* @I2C_ADDR_READ, align 4
  %26 = load i32, i32* @HOTDOX_I2C_TIMEOUT, align 4
  %27 = call i64 @i2c_start(i32 %25, i32 %26)
  store i64 %27, i64* %6, align 8
  %28 = load i64, i64* %6, align 8
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %24
  br label %35

31:                                               ; preds = %24
  %32 = load i32, i32* @HOTDOX_I2C_TIMEOUT, align 4
  %33 = call i64 @i2c_read_nack(i32 %32)
  %34 = load i64*, i64** %5, align 8
  store i64 %33, i64* %34, align 8
  br label %35

35:                                               ; preds = %31, %30, %23, %16
  %36 = call i32 (...) @i2c_stop()
  %37 = load i64, i64* %6, align 8
  store i64 %37, i64* %3, align 8
  br label %38

38:                                               ; preds = %35, %9
  %39 = load i64, i64* %3, align 8
  ret i64 %39
}

declare dso_local i64 @i2c_start(i32, i32) #1

declare dso_local i64 @i2c_write(i64, i32) #1

declare dso_local i64 @i2c_read_nack(i32) #1

declare dso_local i32 @i2c_stop(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
